bk_ida/gobmkida/c1/liberty_of_goal
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/liberty_of_goal/src/engine/owl.c:1446:6: error: use of undeclared identifier 'byte_9AA89F'
if ( byte_9AA89F[pos] == 3 || ( result = 1, !owl->goal[pos - 1]) ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/liberty_of_goal/src/engine/owl.c:1448:6: error: use of undeclared identifier 'byte_9AA88C'
if ( byte_9AA88C[pos] == 3 || ( result = 1, !owl->goal[pos - 20]) ) 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/liberty_of_goal/src/obj/1/owl.o] Error 1
